--- a/Unity/Unity.Model.csproj
+++ b/Unity/Unity.Model.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Assets\Model\Base\Async\AsyncETTaskMethodBuilder.cs" />
     <Compile Include="Assets\Model\Base\Async\AsyncETVoidMethodBuilder.cs" />
     <Compile Include="Assets\Model\Base\Async\AsyncMethodBuilderAttribute.cs" />
+    <Compile Include="Assets\Model\Base\Async\ETCancellationTokenSource.cs" />
     <Compile Include="Assets\Model\Base\Async\ETTask.cs" />
     <Compile Include="Assets\Model\Base\Async\ETTaskCompletionSource.cs" />
     <Compile Include="Assets\Model\Base\Async\ETTaskFactory.cs" />
@@ -493,7 +494,9 @@
     <Compile Include="Assets\Model\Module\UI\UI.cs" />
     <Compile Include="Assets\Model\Module\UI\UIComponent.cs" />
     <Compile Include="Assets\Model\Module\UI\UIFactoryAttribute.cs" />
+    <Compile Include="Assets\Model\Module\UI\UIPanelConfig.cs" />
     <Compile Include="Assets\Model\Module\UI\UIType.cs" />
+    <Compile Include="Assets\Model\Module\UI\WindowLayer.cs" />
     <Compile Include="Assets\Model\Other\AppType.cs" />
     <Compile Include="Assets\Model\Other\Define.cs" />
     <Compile Include="Assets\Model\Other\GizmosDebug.cs" />
